--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -1,44 +1,79 @@
 
 body{
+    background-image:url("images/oCvsFYI.jpg");
+
 }
-header{
-    background-color: pink;
+
+img{
+    max-width: 100%;
 }
 
 main{
-    background-color:black;
+    padding-top:50px;
+    padding-bottom:50px;
+    background-color:rgba(0, 0, 0, 0.651); 
+    margin-left:20%;
+    margin-right:20%;
+    
+}
+
+main div{
+    border-radius:25px;
+    align-items: center;
+    display: grid;
+    margin-left:20%;
+    margin-right:20%;
+    grid-template-columns: 40% 60%;
+    margin-bottom:20px;
+    text-align: center;
+    background-color: #8cb3d9;
+    font-family: inherit;
+    font-weight: bold;
+    font-size:15px;
+    
+}
+
+main div img{
+    border-radius:25px 0 0 25px;
+    width:100%;
+    height: 130px;
 }
 footer{
     background-color:blue;
 }
+nav{
+    margin:0;
+}
 nav ul{
-    
+    margin:0;
     display:grid;
-    grid-template-columns: 10% 20% 20% 20% 20% 10%;
+    grid-template-columns: 10% 30% 15% 15% 15% 15%;
     background-color: #b3b3b3;
     min-height:40px;
     position: relative;
     box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
-    border-radius: 10px;  
-    margin-left:5%;
-    margin-right:5%;
-    align-content: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    align-items:center;
+    
     list-style:none;
 
 }
-nav ul li:first-of-type{
-    
-    grid-column-start: 2;
+nav ul li:nth-of-type(2){
+    grid-column-start:3;
 }
 nav ul li a{
+    
     text-align: center;
     font-family: inherit;
+    font-size: 20px;
     font-weight: bold;
     color:black;
     text-decoration: none;
     display: block; padding: 5% 5%;
 }
 nav ul li:hover {
+    height: 100%;
 	background: #4b545f;
 
 }
@@ -61,11 +96,10 @@ nav ul ul {
     position: absolute; 
     top: 100%;
     width:100%;
-    grid-column: 3/4;
+    grid-column: 4/5;
 }
 nav ul ul li {
 
-	float: none; 
 	border-top: 1px solid #6b727c;
     border-bottom: 1px solid #575f6a;
     position: relative;
@@ -75,4 +109,22 @@ nav ul ul li {
     font-weight: bold;
     color:black;
     text-decoration: none;
+}
+nav ul ul li:hover{
+    background-color: red;
+}
+#kidSelector{
+    background-color: red;
+}
+#map{
+    background-image:url("images/maps.jpg");
+    background-size: cover;
+
+}
+nav ul li img{
+    width: 50%;
+    border-radius: 50%;
+}
+nav ul li:first-of-type{
+        background-color: #b3b3b3;
 }
