--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -1,7 +1,7 @@
 
 body{
     background-image:url("images/oCvsFYI.jpg");
-
+    margin:0;
 }
 
 img{
@@ -9,20 +9,49 @@ img{
 }
 
 main{
+    display: grid;
+    padding-left:5%;
+    grid-template-columns: 50% 50%;
     padding-top:50px;
     padding-bottom:50px;
-    background-color:rgba(0, 0, 0, 0.651); 
-    margin-left:20%;
-    margin-right:20%;
+    background-color:rgba(0, 0, 0, 0.7); 
+    padding-left:15%;
+    padding-right:15%;
     
 }
+main div:nth-child(odd){
+    margin-right: 5%;
+}
+main div:nth-child(even){
+    margin-left: 5%;
+}
+#add img{
+    width: 30%;
+}
 
+#add{ 
+    display:block;
+    grid-column-start: 1;
+    grid-column-end:3;
+    
+}
+main a{
+    text-decoration: none;
+
+}
+main div:hover{
+    background-color: #336699;
+}
+main a:nth-of-type(1){
+    margin-top:50px;
+}
+main a:nth-of-type(2){
+    margin-top:50px;
+}
 main div{
     border-radius:25px;
     align-items: center;
     display: grid;
-    margin-left:20%;
-    margin-right:20%;
     grid-template-columns: 40% 60%;
     margin-bottom:20px;
     text-align: center;
@@ -39,27 +68,79 @@ main div img{
     height: 130px;
 }
 footer{
-    background-color:blue;
+    display: grid;
+    grid-template-columns: 50% 50%; 
+    align-items: center;
+    text-align: left;
+    background-color: #8cb3d9;
+
+}
+footer #facebook{
+    align-items: center;
+    display: grid;
+    grid-template-columns: 40% 5% 55%;
+  
+    
+}
+footer #facebook img{
+    grid-column-start: 2;
+    border-radius: 50px;
+}
+footer #email{
+    margin-left:40%;
+    display: grid;
+    grid-template-columns: 10% 50%;
+    align-items: center;
+
+}
+footer #email img{
+    margin-top:10%;
+    border-radius: 50px;
+}
+footer div a{
+    padding-left:10px;
+    text-decoration: none;
+    font-family: inherit;
+    color: black;
+}
+
+footer #facebook a{
+    text-decoration: none;
 }
 nav{
+    width:100%; 
     margin:0;
+    position: fixed;
+    
+
 }
 nav ul{
     margin:0;
     display:grid;
-    grid-template-columns: 10% 30% 15% 15% 15% 15%;
-    background-color: #b3b3b3;
+    grid-template-columns: 5% 35% 15% 15% 15% 15%;
+    background-color: #336699;
     min-height:40px;
     position: relative;
     box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     align-items:center;
-    
     list-style:none;
 
 }
-nav ul li:nth-of-type(2){
+nav ul li:first-of-type:hover{
+    background-color: #336699
+
+}
+#KIMO{
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: bold;
+    color:black;
+}
+nav ul li:nth-of-type(2):hover{
+    background-color: #336699;
+    
+}
+nav ul li:nth-of-type(3){
     grid-column-start:3;
 }
 nav ul li a{
@@ -83,13 +164,14 @@ nav ul li:hover a {
 nav ul li:hover + ul{
     display:block;
 }
+
 nav ul li+ ul:hover{
     display: block;
 }
 
 nav ul ul {
     display:none;
-    background: #b3b3b3;
+    background: #8cb3d9;
     border-radius:0%;
     margin:0%;
     padding: 0%;
@@ -111,11 +193,10 @@ nav ul ul li {
     text-decoration: none;
 }
 nav ul ul li:hover{
-    background-color: red;
+    position: relative;
+    background-color: #336699   ;
 }
-#kidSelector{
-    background-color: red;
-}
+
 #map{
     background-image:url("images/maps.jpg");
     background-size: cover;
@@ -124,7 +205,4 @@ nav ul ul li:hover{
 nav ul li img{
     width: 50%;
     border-radius: 50%;
-}
-nav ul li:first-of-type{
-        background-color: #b3b3b3;
 }
