--- a/project/styles/index_profile.css
+++ b/project/styles/index_profile.css
@@ -79,13 +79,72 @@ a div{
 #datas img{
     width: 20%;
 }
+#datas a{
+    color: black;
+}
 .actions div{
     display:grid;
     grid-template-columns: 20% 80%;
     align-content: center;
     align-items: center;
     font-weight: bold;
-    
+}
+.modal:target{
+    display: table;
+}
+.modal{
+    display:none;
+    background:rgba(0, 0, 0, .8);
+    position:fixed;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+  }
+  .modal:target{
+    display:table;
+  }
+  .modal__dialog{
+    display:table-cell;
+    vertical-align:middle;
+  }
+  
+  .modal__content{
+    background:rgb(255, 255, 255);
+    width:60%;
+    min-width:300px;
+    margin:auto;
+    position:relative;
+    animation: slideUp 0.3s ease-in-out;
+  }
+  
+  .modal__header{
+    background:#2980b9;
+    color:rgba(255, 255, 255, 0.8);
+    padding:1rem;
+    position:relative;
+  }
+  .modal__title{
+    margin:0;
+  }
+  .modal__close{
+    color:#fff;
+    text-decoration: none;
+    position:absolute;
+    top:1rem;
+    right:1rem;
+  }
+  form{
+      display: grid;
+      margin: 5%;
+      justify-items: center;
+  }
+  form input{
+      width: 50%;
+      align-self: center;
+  }
+form img{
+    width: 5%;
 }
 
 footer{
