--- a/project/styles/style_senzor.css
+++ b/project/styles/style_senzor.css
@@ -11,6 +11,7 @@ main{
     background-color: rgba(0, 0, 0, 0.3 );
     width:100%;
 }
+
 form{
     box-shadow: 5px 5px 3px 3px rgba(0, 0, 0, 0.719);
     margin-top:50px;
@@ -21,6 +22,16 @@ form{
     text-align: center;
     background-color: #336699;
     
+}
+#end{
+    background-color: #DEB40A;
+    border:none;    
+    color:black;
+    padding:5px 5px 5px 5px;
+    border-radius: 5px;
+}
+#end:hover{
+    background-color: rgb(167, 135, 10);
 }
 #kid_id{
     padding-top:25px;
