--- a/project/styles/index_profile.css
+++ b/project/styles/index_profile.css
@@ -69,7 +69,10 @@ a div{
     max-width: 100%;
     height: 50px;
 }
-
+#add a
+{
+    color: black;
+}
 .actions{
     padding:10%;
     grid-column-start: 2;
@@ -89,9 +92,21 @@ a div{
     align-items: center;
     font-weight: bold;
 }
-.modal:target{
+label{
+    display: inline-block;
+}
+.modal2:target{
     display: table;
 }
+.modal2{
+    display:none;
+    background:rgba(0, 0, 0, .8);
+    position:fixed;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+  }
 .modal{
     display:none;
     background:rgba(0, 0, 0, .8);
@@ -145,6 +160,16 @@ a div{
   }
 form img{
     width: 5%;
+}
+#form2{
+    display: grid;
+    margin: 5%;
+    justify-items: center;
+    align-items: center;
+}
+#item input{
+    width: 50%;
+    align-self: center;
 }
 
 footer{
