--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -39,9 +39,7 @@ main div:nth-child(even){
 #add:active + #add1{
     display:grid;
 }
-#add:active{
-    display: none;
-}
+
 
 main a{
     text-decoration: none;
@@ -326,6 +324,85 @@ nav ul li img{
     
     }
 }
+.modal2:target{
+    display: table;
+}
+.modal2{
+    display:none;
+    background:rgba(0, 0, 0, .8);
+    position:fixed;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+  }
+  .modal__dialog{
+    display:table-cell;
+    vertical-align:middle;
+  }
+  
+  .modal__content{
+    background:rgb(255, 255, 255);
+    width:60%;
+    min-width:300px;
+    margin:auto;
+    position:relative;
+    animation: slideUp 0.3s ease-in-out;
+  }
+  
+  .modal__header{
+    background:#2980b9;
+    color:rgba(255, 255, 255, 0.8);
+    padding:1rem;
+    position:relative;
+  }
+  .modal__title{
+    margin:0;
+  }
+  .modal__close{
+    color:#fff;
+    text-decoration: none;
+    position:absolute;
+    top:1rem;
+    right:1rem;
+  }
+
+#form2{
+    display: grid;
+    margin: 10%;
+    justify-items: center;
+    align-items: center;
+}
+#gen{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+#text .item{
+    display:grid;
+    grid-template-columns: 50% 50%;
+    
+}
+
+#addphoto{
+    display:grid;
+    grid-template: 100%;
+    text-align: center;
+    padding-left:25%;
+padding-right:25%;
+}
+#addphoto input{
+    padding-left:25%;
+padding-right:25%;
+    
+}
+.item{
+    margin-bottom:25px;
+}
+.item input{
+    width: 100%;
+    align-self: center;
+}
+
 @media screen and (max-width: 420px){
 
 main{
