--- a/project/styles/style_kid.css
+++ b/project/styles/style_kid.css
@@ -58,17 +58,64 @@ a div{
 }
 #dataprofile img{
    max-height: 100px;
-   padding-top: 25%;
-   padding-left: 15%
+    padding-top: 15%;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 #name{
     grid-column-start: 2;
-   padding-top: 17%;
-    align-content: center;
-    text-align: start;
     font-weight: bold;
     font-family: inherit;
     max-width: 100%;
     font-size: 25px;
+    padding-top: 12%;
+    padding-left: 7%;
 
+}
+main{
+ padding-top: 40px;
+}
+.map{
+    margin: 3%;
+}
+.map img{
+    max-width: 100%;
+    
+}
+
+
+.person:hover + ul{
+    display:block;
+}
+
+.person+ ul:hover{
+    display: block;
+}
+
+.act ul {
+    display:none;
+    background: #8cb3d9;
+    border-radius:0%;
+    margin:0%;
+    padding: 0%;
+    position: absolute; 
+    top: 100%;
+    width:100%;
+    grid-column: 4/5;
+}
+.act ul li {
+
+	border-top: 1px solid #6b727c;
+    border-bottom: 1px solid #575f6a;
+    position: relative;
+    min-height: 40px;
+    text-align: center;
+    font-family: inherit;
+    font-weight: bold;
+    color:black;
+    text-decoration: none;
+}
+.act ul li:hover{
+    position: relative;
+    background-color: #336699   ;
 }
