--- a/project/styles/login.css
+++ b/project/styles/login.css
@@ -39,6 +39,10 @@ main{
     text-shadow:  1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 } 
 
+#KIMO:hover{
+    transform: scale(1.1);
+}
+
 #Logo img{
     display: block;
     margin-top: 5%;
