--- a/project/styles/Message.css
+++ b/project/styles/Message.css
@@ -71,7 +71,7 @@ nav ul li:first-of-type:hover{
     background-color: #336699
 
 }
-#KIMO{
+.KIMO{
     font-family: inherit;
     font-size: 20px;
     font-weight: bold;
@@ -102,11 +102,11 @@ nav ul li:hover {
 nav ul li:hover a {
 	color: #fff;
 }
-nav ul li:hover + ul{
+nav ul li:hover ul{
     display:block;
 }
 
-nav ul li+ ul:hover{
+nav ul li ul:hover{
     display: block;
 }
 
@@ -204,10 +204,10 @@ main{
     #menu2 ul{
         display:none;
     }
-    #menu2 li:nth-of-type(2):hover+ul{
+    #menu2 li:nth-of-type(2):hover ul{
         display: block;
     } 
-    #menu2 li:nth-of-type(2):active+ul{
+    #menu2 li:nth-of-type(2):active ul{
         display: block;
     } 
     #menu2{
