--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -142,7 +142,7 @@ nav ul li:first-of-type:hover{
     background-color: #336699
 
 }
-#KIMO{
+.KIMO{
     font-family: inherit;
     font-size: 20px;
     font-weight: bold;
@@ -173,11 +173,11 @@ nav ul li:hover {
 nav ul li:hover a {
 	color: #fff;
 }
-nav ul li:hover + ul{
+nav ul li:hover ul{
     display:block;
 }
 
-nav ul li+ ul:hover{
+nav ul li ul:hover{
     display: block;
 }
 
@@ -243,10 +243,10 @@ nav ul li img{
     #menu2 ul{
         display:none;
     }
-    #menu2 li:nth-of-type(2):hover+ul{
+    #menu2 li:nth-of-type(2):hover ul{
         display: block;
     } 
-    #menu2 li:nth-of-type(2):active+ul{
+    #menu2 li:nth-of-type(2):active ul{
         display: block;
     } 
     #menu2{
@@ -386,7 +386,7 @@ nav ul li img{
 
 #addphoto{
     display:grid;
-    grid-template: 100%;
+    grid-template-columns: 100%;
     text-align: center;
     padding-left:25%;
 padding-right:25%;
