--- a/project/styles/style_kid.css
+++ b/project/styles/style_kid.css
@@ -96,11 +96,11 @@ main{
     display: block;
 }
 .person ul {
-    position: absolute;
+    position: relative;
     display:none;
     padding:0;
-    width: 14%;
-    margin-top:260px;
+    margin: 0;
+    width: 100%;
     background-color: #8cb3d9;
 }
 
@@ -113,18 +113,8 @@ main{
     font-family: inherit;
     font-weight: bold;
     color:black;
-    text-decoration: none;
+    list-style-type: none;
 }
 .person ul li:hover{
     background-color: #336699   ;
-}
-@media screen and (max-width: 760px){
-    .person ul {
-        width: 28%;
-    }
-}
-@media screen and (max-width: 420px){
-    .person ul {
-        width: 35%;
-    }
 }
