--- a/project/styles/style_kid.css
+++ b/project/styles/style_kid.css
@@ -2,7 +2,9 @@
     background-color: #336699ad;
     display: grid;
     align-content: center;
+    grid-row-gap: 3%;
 }
+
 .act {
     text-decoration: none;
     font-size: 100%;
@@ -49,18 +51,19 @@ a div{
 }
 .profile{
  background-color: white;
- 
 }
 #dataprofile{
     display: grid;
     grid-template-columns: 30% 70%;
     align-content: center;
+    margin-top: 10%;
+    margin-left:5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
 }
 #dataprofile img{
    max-height: 100px;
-    padding-top: 15%;
-    padding-left: 15%;
-    padding-right: 15%;
+    margin:3%;
 }
 #name{
     grid-column-start: 2;
@@ -68,7 +71,7 @@ a div{
     font-family: inherit;
     max-width: 100%;
     font-size: 25px;
-    padding-top: 12%;
+    padding-top: 8%;
     padding-left: 7%;
 
 }
@@ -76,7 +79,9 @@ main{
  padding-top: 40px;
 }
 .map{
-    margin: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 3%;
 }
 .map img{
     max-width: 100%;
@@ -84,6 +89,7 @@ main{
 }
 
 .person{
+   
     display: grid;
     grid-template-columns: 100%;
 }
@@ -117,4 +123,40 @@ main{
 }
 .person ul li:hover{
     background-color: #336699   ;
+}
+a li {
+    font-family: inherit;
+    font-weight: bold;
+    color:black;
+    text-decoration: none;
+   
+}
+a
+{
+    color: black;
+}
+form{
+    display:grid;
+    grid-template-columns: 100%;
+    grid-row-gap: 5%;
+    
+
+}
+.modal__body{
+    margin: 10%;
+}
+@media screen and (max-width: 840px){
+    #dataprofile {
+        padding-top: 10%;
+     }
+     .modal__body{
+        margin: 15%;
+    }
+     
+}
+@media screen and (max-width: 400px){
+    #dataprofile {
+        padding-top: 15%;
+     }
+     
 }
