--- a/project/styles/style_kid.css
+++ b/project/styles/style_kid.css
@@ -144,10 +144,19 @@ form{
 }
 .modal__body{
     margin: 10%;
+    padding-bottom:10%;
 }
+.modal__save{
+    color:#fff;
+    text-decoration: none;
+    position:absolute;
+    top:1rem;
+    right:5rem;
+  }
 @media screen and (max-width: 840px){
     #dataprofile {
         padding-top: 10%;
+        
      }
      .modal__body{
         margin: 15%;
