--- a/project/styles/Message.css
+++ b/project/styles/Message.css
@@ -164,10 +164,13 @@ main{
 }
 
 #profil img{
-    margin-left: 15%;
+    grid-column-start: 1;
+    width: 100%;
+    max-width: 600px;
 }
 
 #profil div{
+    grid-column-start: 2;
     display: flex;
     flex-direction: column;
     justify-content: center;
