--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -1,3 +1,27 @@
+.modal3:target{
+    display: table;
+}
+.modal3{
+    display:none;
+    background:rgba(0, 0, 0, .8);
+    position:fixed;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+  }
+.modal3 .modal__header{
+    background:red;
+    color:rgba(255, 255, 255, 0.8);
+    padding:1rem;
+    position:relative;
+  }
+
+#situation {
+    text-align : center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 
 body{
     background-image:url("images/oCvsFYI.jpg");
