--- a/project/styles/Message.css
+++ b/project/styles/Message.css
@@ -315,9 +315,7 @@ form button:hover{
     position:relative;
   }
 
-/* .modal:target{
-display:table;
-} */
+
 .modal__dialog{
 display:table-cell;
 vertical-align:middle;
@@ -332,12 +330,6 @@ position:relative;
 animation: slideUp 0.3s ease-in-out;
 }
 
-/* .modal__header{
-background:#2980b9;
-color:rgba(255, 255, 255, 0.8);
-padding:1rem;
-position:relative;
-} */
 .modal__title{
 margin:0;
 }
@@ -359,7 +351,7 @@ justify-items: center;
 #message_modal p{
     
     width: 50%;
-    align-self: center;
+    text-align: center;
 }
 
 #notification li a{
@@ -370,6 +362,16 @@ justify-items: center;
 #notification li a:hover{
     color: white;
 }
+
+.formMessage{
+    background: none;
+    box-shadow: none;
+}
+
+.formMessage input{
+    margin-left: 45%;
+}
+
 
 @media screen and (max-width: 760px){
     nav ul{
