--- a/project/styles/index_profile.css
+++ b/project/styles/index_profile.css
@@ -1,3 +1,75 @@
+.modal4:target{
+    display: table;
+}
+.modal4{
+    display:none;
+    background:rgba(0, 0, 0, .8);
+    position:fixed;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+  }
+.modal4 .modal__header{
+    background:purple;
+    color:rgba(255, 255, 255, 0.8);
+    padding:1rem;
+    position:relative;
+  }
+
+
+.modal__dialog{
+display:table-cell;
+vertical-align:middle;
+}
+
+.modal4 .modal__content{
+background:rgb(255, 255, 255);
+width:60%;
+min-width:300px;
+margin:auto;
+position:relative;
+animation: slideUp 0.3s ease-in-out;
+}
+
+.modal__title{
+margin:0;
+}
+.modal__close{
+color:#fff;
+text-decoration: none;
+position:absolute;
+top:1rem;
+right:1rem;
+}
+
+#message_modal{
+    background: none;
+    box-shadow: none;
+display: grid;
+margin: 5%;
+justify-items: center;
+}
+#message_modal p{
+    
+    width: 50%;
+    text-align: center;
+}
+
+#notification li a{
+    color: black;
+    font-size: 15px;
+}
+
+#notification li a:hover{
+    color: white;
+}
+
+.buttonReplay{
+    align-content: center;
+    background: none;
+    width: 100%
+}
 
 body{
     background-image:url("images/oCvsFYI.jpg");
@@ -9,7 +81,7 @@ img{
 }
 
 nav ul:hover ul li a{
-color:red;
+/* color:red; */
 font-size:16px;
 }
 
